--- a/.github/workflows/CI_Pipeline.yml
+++ b/.github/workflows/CI_Pipeline.yml
@@ -41,6 +41,54 @@ jobs:
     - name: Test with Maven
       run: mvn test
 
+  code_quality:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up JDK
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '17'
+
+    - name: Code Quality Analysis
+      run: mvn clean verify sonar:sonar
+
+  dependency_scan:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up JDK
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '17'
+        
+    - name: Dependency Scanning
+      run: mvn dependency-check:check
+
+  generate_docs:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up JDK
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '17'
+
+    - name: Generate Documentation
+      run: mvn javadoc:javadoc
+
   deploy:
     runs-on: ubuntu-latest
     
